--- a/web/index.html
+++ b/web/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>hanconv</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="bg-transparent">
+    <div id="app" class="h-screen max-h-screen w-screen"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
